answered P1 in Using the For Loop

--- a/m3-1-1-using_the_for_loop/index.html
+++ b/m3-1-1-using_the_for_loop/index.html
@@ -8,6 +8,9 @@
     PROBLEM 1: Using a for loop, print to the console the numbers 1-10 with the string "Mississippi" after each number. e.g. "1 Mississippi", "2 Mississippi", etc.
     */
     //ENTER YOUR CODE HERE
+    for (let i = 1; i <= 10; i++) {
+      console.log(`${i}Mississippi`);
+    }
 
     /*
     PROBLEM 2: Using a for loop, iterate over each item in the 'numbers' array and print any number that even
